# BrainActivityVisualizer

./: .gitignore  .project  CMakeLists.txt  MANUAL.txt  Makefile  README.md  doxyconfig  locdata.smproj
BrainActivityVisualizer/: BrainActivityVisualizer.pro  glwidget.cpp  glwidget.h  mainwindow.ui
cmake/: FindTinyObjLoader.cmake  FindUniShader.cmake
data/: TEST.elass
doc/: META-saved.txt  fitthesis.cls  literatura.bib  obsah.tex  prilohy.tex  projekt.bbl  projekt.tex
doc/fig/prep/: 2dplace.dxf  ImplFiltervsdx.vsdx  OpenGL pipeline.vsdx  filterRiples.m  signalDec.m  sigviewer.psd  svarog.psd  system10-10.psd  view2D.psd
forms/: electrodeMapDialog.ui  electrodewindow2d.ui  electrodewindow3d.ui  filterDialog.ui  mainwindow.ui  opensignalfiledialog.ui  playerSettingsDialog.ui
inc/core/: brainRenderer.h  electrode.h  electrodeAdapter.h  electrodeLoader.h  electrodeMap.h  electrodePlacer2D.h  electrodeRenderer.h  electrodeRenderer2D.h  electrodeRenderer3D.h  fileInputModule.h  geometry.h  glewContextSupport.h  glmHelpers.h  graphGrid2D.h  graphItem2D.h  graphRenderer2D.h  hybridCam.h  inputModule.h  safePtr.h  safePtr.inl  shapeRenderer2D.h  signalReader.h  signalRecord.h
inc/gui/: dummyFilter.h  electrodeMapDialog.h  electrodeView2D.h  electrodeView3D.h  electrodewindow2d.h  electrodewindow3d.h  filterDialog.h  graphView2D.h  mainwindow.h  openglwidget.h  openglwindow.h  opensignalfiledialog.h  player.h  playerSettingsDialog.h
inc/signal/: blackmanWindow.h  fourierTransform.h  hammingWindow.h  highpassFilter.h  lowpassFilter.h  signalBatch.h  signalData.h  signalFilter.h  signalWindow.h  spectrum.h
latex/: desky.tex  fitthesis.cls  literatura.bib  obsah.tex  prilohy.tex  projekt.tex
latex/fig/prep/: ElRender.vsdx  ImplFiltervsdx.vsdx  chartView.psd  gradient.pptx  gui.psd  system.vsdx  view3D.psd
licenses/: LICENSE.txt
licenses/Brain model/: LICENSE.txt
licenses/EEG data/: LICENSE.txt
licenses/KissFFT/: LICENSE.txt
licenses/TinyObjLoader/: LICENSE.txt
licenses/UniShader/: LICENSE.txt
models/: brain-hi-res.mtl  brain-lo-res.mtl
presentation/: prez.tex
resources/data/: S013R13.edf  S013R13.elass
resources/electrodes/: default.elmap
shaders/: brain.frag  brain.vert  electrodeNames.frag  electrodeNames.geom  electrodeNames.vert  electrodes.frag  electrodes.geom  electrodes.vert  electrodesOrtho.frag  electrodesOrtho.geom  electrodesOrtho.vert  graph2D.frag  graph2D.geom  graph2D.vert  graphGrid2D.frag  graphGrid2D.vert  shapes2D.frag  shapes2D.vert
src/core/: brainRenderer.cpp  electrode.cpp  electrodeAdapter.cpp  electrodeLoader.cpp  electrodeMap.cpp  electrodePlacer2D.cpp  electrodeRenderer.cpp  electrodeRenderer2D.cpp  electrodeRenderer3D.cpp  fileInputModule.cpp  geometry.cpp  glewContextSupport.cpp  glmHelpers.cpp  graphGrid2D.cpp  graphItem2D.cpp  graphRenderer2D.cpp  hybridCam.cpp  inputModule.cpp  shapeRenderer2D.cpp  signalReader.cpp  signalRecord.cpp
src/gui/: dummyFilter.cpp  electrodeMapDialog.cpp  electrodeView2D.cpp  electrodeView3D.cpp  electrodewindow2d.cpp  electrodewindow3d.cpp  filterDialog.cpp  graphView2D.cpp  main.cpp  mainwindow.cpp  openglwidget.cpp  opensignalfiledialog.cpp  player.cpp  playerSettingsDialog.cpp
src/signal/: blackmanWindow.cpp  fourierTransform.cpp  hammingWindow.cpp  highpassFilter.cpp  lowpassFilter.cpp  signalBatch.cpp  signalData.cpp  signalFilter.cpp  signalWindow.cpp  spectrum.cpp
src/test/: test.cpp
test/: filterCorr.m  high100Black10  high100Black5  high100Hamm10  high100Hamm5  high50Black10  high50Black5  high50Hamm10  high50Hamm5  low10Black10  low10Black5  low10Hamm10  low10Hamm5  low5Black10  low5Black5  low5Hamm10  low5Hamm5  sig.txt  sigProc.m
